--- a/serverless.yml
+++ b/serverless.yml
@@ -1,49 +1,13 @@
-# Welcome to Serverless!
-#
-# This file is the main config file for your service.
-# It's very minimal at this point and uses default values.
-# You can always add more config options for more control.
-# We've included some commented out config examples here.
-# Just uncomment any of them to get that config option.
-#
-# For full config options, check the docs:
-#    docs.serverless.com
-#
-# Happy Coding!
-
-service: gaurdduty-to-slack
-
-# You can pin your service to only deploy with a specific Serverless version
-# Check out our docs for more details
-# frameworkVersion: "=X.X.X"
+service: guardduty-slack-reporter
 
 provider:
   name: aws
   runtime: go1.x
+  region: ap-southeast-2
 
-# you can overwrite defaults here
-#  stage: dev
-#  region: us-east-1
-
-# you can add statements to the Lambda function's IAM Role here
-#  iamRoleStatements:
-#    - Effect: "Allow"
-#      Action:
-#        - "s3:ListBucket"
-#      Resource: { "Fn::Join" : ["", ["arn:aws:s3:::", { "Ref" : "ServerlessDeploymentBucket" } ] ]  }
-#    - Effect: "Allow"
-#      Action:
-#        - "s3:PutObject"
-#      Resource:
-#        Fn::Join:
-#          - ""
-#          - - "arn:aws:s3:::"
-#            - "Ref" : "ServerlessDeploymentBucket"
-#            - "/*"
-
-# you can define service wide environment variables here
-#  environment:
-#    variable1: value1
+environment:
+  OAUTH_ACCESS_TOKEN: ${ssm:guardBotOAuthAccessToken}
+  CHANNEL: ${ssm:guardChannel}
 
 package:
  exclude:
@@ -52,53 +16,70 @@ package:
    - ./bin/**
 
 functions:
-  hello:
-    handler: bin/hello
-  world:
-    handler: bin/world
-
-#    The following are a few example events you can configure
-#    NOTE: Please make sure to change your handler code to work with those events
-#    Check the event documentation for details
-# events:
-#    events:
-#      - http:
-#          path: users/create
-#          method: get
-#      - s3: ${env:BUCKET}
-#      - schedule: rate(10 minutes)
-#      - sns: greeter-topic
-#      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill: amzn1.ask.skill.xx-xx-xx-xx
-#      - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
-#      - iot:
-#          sql: "SELECT * FROM 'some_topic'"
-#      - cloudwatchEvent:
-#          event:
-#            source:
-#              - "aws.ec2"
-#            detail-type:
-#              - "EC2 Instance State-change Notification"
-#            detail:
-#              state:
-#                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
-#      - cognitoUserPool:
-#          pool: MyUserPool
-#          trigger: PreSignUp
-
-#    Define function environment variables here
-#    environment:
-#      variable2: value2
-
-# you can add CloudFormation resource templates here
-#resources:
-#  Resources:
-#    NewResource:
-#      Type: AWS::S3::Bucket
-#      Properties:
-#        BucketName: my-new-bucket
-#  Outputs:
-#     NewOutput:
-#       Description: "Description for the output"
-#       Value: "Some output value"
+  finding-reporter:
+    handler: bin/finding-reporter
+    events:
+      - cloudwatchEvent:
+          name: "guard-duty-findings"
+          enabled: true
+          event:
+            source:
+              - "aws.guardduty"
+            detail-type:
+              - "GuardDuty Finding"
+            detail:
+              severity:
+                - 4
+                - 4.0
+                - 4.1
+                - 4.2
+                - 4.3
+                - 4.4
+                - 4.5
+                - 4.6
+                - 4.7
+                - 4.8
+                - 4.9
+                - 5.0
+                - 5.1
+                - 5.2
+                - 5.3
+                - 5.4
+                - 5.5
+                - 5.6
+                - 5.7
+                - 5.8
+                - 5.9
+                - 6
+                - 6.0
+                - 6.1
+                - 6.2
+                - 6.3
+                - 6.4
+                - 6.5
+                - 6.6
+                - 6.7
+                - 6.8
+                - 6.9
+                - 7
+                - 7.0
+                - 7.1
+                - 7.2
+                - 7.3
+                - 7.4
+                - 7.5
+                - 7.6
+                - 7.7
+                - 7.8
+                - 7.9
+                - 8
+                - 8.0
+                - 8.1
+                - 8.2
+                - 8.3
+                - 8.4
+                - 8.5
+                - 8.6
+                - 8.7
+                - 8.8
+                - 8.9
